src/lib/libJKFactory/ga-5-3b/python/ga4py/gah.pxd

    void          NGA_Access_ghosts64(int g_a, int64_t dims[], void *ptr, int64_t ld[])
    void          NGA_Add_patch64(void * alpha, int g_a, int64_t alo[], int64_t ahi[], void * beta,  int g_b, int64_t blo[], int64_t bhi[], int g_c, int64_t clo[], int64_t chi[])
    SingleComplex NGA_Cdot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    void          NGA_Copy_patch64(char trans, int g_a, int64_t alo[], int64_t ahi[], int g_b, int64_t blo[], int64_t bhi[])
    int           NGA_Create64(int type,int ndim,int64_t dims[], char *name, int64_t chunk[])
    int           NGA_Create_config64(int type,int ndim,int64_t dims[], char *name, int64_t chunk[], int p_handle)
    int           NGA_Create_ghosts64(int type,int ndim,int64_t dims[], int64_t width[], char *name, int64_t chunk[])
    int           NGA_Create_ghosts_config64(int type,int ndim,int64_t dims[], int64_t width[], char *name, int64_t chunk[], int p_handle)
    int           NGA_Create_ghosts_irreg64(int type,int ndim,int64_t dims[], int64_t width[], char *name, int64_t map[], int64_t nblock[])
    int           NGA_Create_ghosts_irreg_config64(int type,int ndim,int64_t dims[], int64_t width[], char *name, int64_t map[], int64_t nblock[], int p_handle)
    int           NGA_Create_irreg64(int type,int ndim,int64_t dims[],char *name, int64_t map[], int64_t block[])
    int           NGA_Create_irreg_config64(int type,int ndim,int64_t dims[],char *name, int64_t map[], int64_t block[], int p_handle)
    double        NGA_Ddot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    void          NGA_Distribution64(int g_a, int iproc, int64_t lo[], int64_t hi[])
    float         NGA_Fdot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    void          NGA_Fill_patch64(int g_a, int64_t lo[], int64_t hi[], void *val)
    void          NGA_Gather64(int g_a, void *v, int64_t* subsArray[], int64_t n)
    void          NGA_Gather_flat64(int g_a, void *v, int64_t subsArray[], int64_t n)
    void          NGA_Get64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[])
    void          NGA_Get_ghost_block64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[])
    int           NGA_Idot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    void          NGA_Inquire64(int g_a, int *type, int *ndim, int64_t dims[])
    long          NGA_Ldot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    long long     NGA_Lldot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    int           NGA_Locate64(int g_a, int64_t subscript[])
    int           NGA_Locate_nnodes64(int g_a, int64_t lo[], int64_t hi[])
    int           NGA_Locate_region64(int g_a,int64_t lo[],int64_t hi[],int64_t map[],int procs[])
    void          NGA_Matmul_patch64(char transa, char transb, void* alpha, void *beta, int g_a, int64_t alo[], int64_t ahi[], int g_b, int64_t blo[], int64_t bhi[], int g_c, int64_t clo[], int64_t chi[])
    void          NGA_Merge_distr_patch64(int g_a, int64_t alo[], int64_t ahi[], int g_b, int64_t blo[], int64_t bhi[])
    void          NGA_NbAcc64(int g_a,int64_t lo[],int64_t hi[],void* buf,int64_t ld[],void* alpha, ga_nbhdl_t* nbhandle)
    void          NGA_NbGet64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[], ga_nbhdl_t* nbhandle)
    void          NGA_NbGet_ghost_dir64(int g_a, int64_t mask[], ga_nbhdl_t* handle)
    void          NGA_NbPut64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[], ga_nbhdl_t* nbhandle)
    void          NGA_Periodic_acc64(int g_a, int64_t lo[], int64_t hi[],void* buf,int64_t ld[],void* alpha)
    void          NGA_Periodic_get64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[])
    void          NGA_Periodic_put64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[])
    void          NGA_Print_patch64(int g_a, int64_t lo[], int64_t hi[], int pretty)
    void          NGA_Put64(int g_a, int64_t lo[], int64_t hi[], void* buf, int64_t ld[])
    long          NGA_Read_inc64(int g_a, int64_t subscript[], long inc)
    void          NGA_Release64(int g_a, int64_t lo[], int64_t hi[])
    void          NGA_Release_ghost_element64(int g_a, int64_t index[])
    void          NGA_Release_update64(int g_a, int64_t lo[], int64_t hi[])
    void          NGA_Release_update_ghost_element64(int g_a, int64_t index[])
    void          NGA_Scale_patch64(int g_a, int64_t lo[], int64_t hi[], void *alpha)
    void          NGA_Scatter64(int g_a, void *v, int64_t* subsArray[], int64_t n)
    void          NGA_Scatter_flat64(int g_a, void *v, int64_t subsArray[], int64_t n)
    void          NGA_Scatter_acc64(int g_a, void *v, int64_t* subsArray[], int64_t n, void *alpha)
    void          NGA_Scatter_acc_flat64(int g_a, void *v, int64_t subsArray[], int64_t n, void *alpha)
    void          NGA_Select_elem64(int g_a, char* op, void* val, int64_t* index)
    void          NGA_Set_data64(int g_a, int ndim, int64_t dims[], int type)
    void          NGA_Set_ghosts64(int g_a, int64_t width[])
    void          NGA_Set_irreg_distr64(int g_a, int64_t map[], int64_t block[])
    void          NGA_Strided_acc64(int g_a, int64_t lo[], int64_t hi[], int64_t skip[], void* buf, int64_t  ld[], void *alpha)
    void          NGA_Strided_get64(int g_a, int64_t lo[], int64_t hi[], int64_t skip[], void* buf, int64_t  ld[])
    void          NGA_Strided_put64(int g_a, int64_t lo[], int64_t hi[], int64_t skip[], void* buf, int64_t  ld[])
    DoubleComplex NGA_Zdot_patch64(int g_a, char t_a, int64_t alo[], int64_t ahi[], int g_b, char t_b, int64_t blo[], int64_t bhi[])
    void          NGA_Zero_patch64(int g_a, int64_t lo[], int64_t hi[])
